@startuml 3D Maze Diagram

class Maze3d {
    - cells
    - wallsPosition: Map 
    + toString: Representation of the maze
}


abstract class Maze3dGenerator {
    + generate: Maze3d
    + measureAlgorithmTime: Time
}

SimpleMaze3dGenerator <|-- Maze3dGenerator
class SimpleMaze3dGenerator  {
    + generate: Maze3d
    + measureAlgorithmTime: Time
}

DFSMaze3dGenerator <|-- Maze3dGenerator
class DFSMaze3dGenerator {
    + generate: Maze3d
    + measureAlgorithmTime: Time
}

AldousbroderMaze3dGenerator <|-- Maze3dGenerator
class AldousbroderMaze3dGenerator {
    + generate: Maze3d
    + measureAlgorithmTime: Time
}
@enduml